--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Sudoku solver</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
-    <script src="solver.js"></script>
+    <script src="solver.js" type="module"></script>
 </body>
 
 </html>
