First scenario solved
All previous bugs have been solved. In addition, the unique cases searchers for rows, columns and sections have worked. Each wave of unique cases is followed by a general sweep operator that searches in all directions.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Sudoku solver</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
