Inner program ready
The program itself is done. It's capable of fully solving sudokus of any difficulty. What is left is to add inputs features so that the program is capable of reading and understanding sudokus in non-digital format. But so far, for its main objective, the program is ready.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sudoku solver</title>
+    <link rel="icon" type="image/x-icon" href="img/150797.svg">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="shortcut icon" href="#">
 </head>
